Update OpenChestMechanic.java